--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>LogoutController</servlet-name>
         <servlet-class>com.unimazad.controllers.auth.LogoutController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NavigationController</servlet-name>
+        <servlet-class>com.unimazad.controllers.navigation.NavigationController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/RegisterController</url-pattern>
@@ -31,6 +35,10 @@
     <servlet-mapping>
         <servlet-name>LogoutController</servlet-name>
         <url-pattern>/LogoutController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NavigationController</servlet-name>
+        <url-pattern>/NavigationController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
