--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,6 +28,14 @@
         <servlet-name>GetMyListings</servlet-name>
         <servlet-class>com.unimazad.controllers.seller.GetMyListings</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GetAllProductsController</servlet-name>
+        <servlet-class>com.unimazad.controllers.home.GetAllProductsController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>GetProductsByCategoryController</servlet-name>
+        <servlet-class>com.unimazad.controllers.home.GetProductsByCategoryController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/RegisterController</url-pattern>
@@ -55,6 +63,14 @@
     <servlet-mapping>
         <servlet-name>GetMyListings</servlet-name>
         <url-pattern>/GetMyListings</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetAllProductsController</servlet-name>
+        <url-pattern>/GetAllProductsController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GetProductsByCategoryController</servlet-name>
+        <url-pattern>/GetProductsByCategoryController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
