--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <welcome-file-list>
+        <welcome-file>HomePageController</welcome-file>
+    </welcome-file-list>
     <servlet>
         <servlet-name>RegisterController</servlet-name>
         <servlet-class>com.unimazad.controllers.auth.RegisterController</servlet-class>
@@ -36,6 +39,10 @@
         <servlet-name>GetProductsByCategoryController</servlet-name>
         <servlet-class>com.unimazad.controllers.home.GetProductsByCategoryController</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>MakeBidController</servlet-name>
+        <servlet-class>com.unimazad.controllers.seller.MakeBidController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>RegisterController</servlet-name>
         <url-pattern>/RegisterController</url-pattern>
@@ -71,6 +78,10 @@
     <servlet-mapping>
         <servlet-name>GetProductsByCategoryController</servlet-name>
         <url-pattern>/GetProductsByCategoryController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>MakeBidController</servlet-name>
+        <url-pattern>/MakeBidController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
